// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly when iep link toggle disabled 1`] = `
<div
  className="header-details"
>
  <div
    className="row visible-small"
  >
    <div
      className="col-sm-12 no-padding-left"
    >
      <span
        className="acct-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        ACCT OPEN
      </span>
      <span
        className="assault-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        STAFF ASSAULTER
      </span>
      <span
        className="arsonist-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        <img
          alt=""
          className="arsonist-adjust"
          height="14"
          src="/img/Arsonist_icon.png"
          width="11"
        />
         ARSONIST
      </span>
      <span
        className="disability-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        <img
          alt=""
          className="disability-adjust"
          height="15"
          src="/img/Disability_icon.png"
          width="14"
        />
         PEEP
      </span>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-2 col-xs-3 no-left-gutter no-right-gutter"
    >
      <div
        className="photo clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        <img
          className="sc-bdVaJa gYHwxf"
          src="/app/images/-11/data"
        />
      </div>
    </div>
    <div
      className="col-xs-9 col-sm-9 col-md-10 col-lg-10 no-left-gutter no-right-gutter add-gutter-bottom-mobile"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12"
        >
          <div
            className="inline-header-large align-alerts"
          >
            <span
              className="acct-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              ACCT OPEN
            </span>
            <span
              className="assault-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              STAFF ASSAULTER
            </span>
            <span
              className="arsonist-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              <img
                alt=""
                className="arsonist-adjust"
                height="14"
                src="/img/Arsonist_icon.png"
                width="11"
              />
               ARSONIST
            </span>
            <span
              className="disability-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              <img
                alt=""
                className="disability-adjust"
                height="15"
                src="/img/Disability_icon.png"
                width="14"
              />
               PEEP
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-3 col-sm-3 col-xs-12"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Prison number
              </span>
              <strong>
                A1234RT
              </strong>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Key worker
              </span>
              <strong>
                <span>
                  -6
                </span>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="visible-large"
        >
          <div
            className="middle-section"
          >
            <div
              className="col-xs-4 col-sm-3 visible-large"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    IEP
                  </span>
                  <strong>
                    Standard
                  </strong>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    CSRA
                  </span>
                  <strong>
                    Medium
                  </strong>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Category
                  </span>
                  <strong>
                    Cat D
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="col-xs-12 visible-small"
            >
              <div
                className="row"
              >
                <div
                  className="col-xs-4 d-inline-block"
                >
                  <span
                    className="label"
                  >
                    IEP
                  </span>
                  <strong>
                    Standard
                  </strong>
                </div>
                <div
                  className="col-xs-4 d-inline-block"
                >
                  <span
                    className="label"
                  >
                    CSRA
                  </span>
                  <strong>
                    Medium
                  </strong>
                </div>
                <div
                  className="col-xs-4 d-inline-block"
                >
                  <span
                    className="label"
                  >
                    Category
                  </span>
                  <strong>
                    Cat D
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="visible-large"
            >
              <div
                className="col-xs-6 col-sm-3"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <span
                      className="label"
                    >
                      Alerts
                    </span>
                    <a
                      className="alerts-link"
                      href="/offenders/A1234RT/alerts#tab-content"
                      onClick={[Function]}
                    >
                      <span
                        className="active-alert"
                      >
                        <strong>
                          9
                        </strong>
                        <span>
                           active 
                        </span>
                      </span>
                      <span>
                        <strong
                          className="inactive-alert"
                        >
                          8
                        </strong>
                        <span>
                           inactive 
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <div>
                      <span
                        className="label"
                      >
                        Location
                      </span>
                      <div>
                        <strong>
                          H-1-001
                        </strong>
                      </div>
                      <div>
                        <strong>
                          HLI
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="visible-small"
            >
              <div
                className="col-xs-4"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <span
                      className="label"
                    >
                      Alerts
                    </span>
                    <a
                      className="alerts-link"
                      href="/offenders/A1234RT/alerts#tab-content"
                      onClick={[Function]}
                    >
                      <span
                        className="active-alert"
                      >
                        <strong>
                          9
                        </strong>
                        <span>
                           active 
                        </span>
                      </span>
                      <span>
                        <strong
                          className="inactive-alert"
                        >
                          8
                        </strong>
                        <span>
                           inactive 
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
              <div
                className="col-xs-4"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <div>
                      <span
                        className="label"
                      >
                        Location
                      </span>
                      <div>
                        <strong>
                          H-1-001
                        </strong>
                      </div>
                      <div>
                        <strong>
                          HLI
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-xs-12 col-sm-3"
            >
              <div
                className="stacked-links"
              >
                <div>
                  <a
                    className="button-link"
                    href="/offenders/A1234RT/add-case-note"
                    name="add-case-note-link"
                    onClick={[Function]}
                  >
                    Add case note
                  </a>
                </div>
                <div>
                  <a
                    className="button-link"
                    href="/offenders/A1234RT/add-appointment"
                    name="add-appointment-link"
                    onClick={[Function]}
                  >
                    Add appointment
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="visible-small"
    >
      <div
        className="middle-section"
      >
        <div
          className="col-xs-4 col-sm-3 visible-large"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                IEP
              </span>
              <strong>
                Standard
              </strong>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                CSRA
              </span>
              <strong>
                Medium
              </strong>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Category
              </span>
              <strong>
                Cat D
              </strong>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 visible-small"
        >
          <div
            className="row"
          >
            <div
              className="col-xs-4 d-inline-block"
            >
              <span
                className="label"
              >
                IEP
              </span>
              <strong>
                Standard
              </strong>
            </div>
            <div
              className="col-xs-4 d-inline-block"
            >
              <span
                className="label"
              >
                CSRA
              </span>
              <strong>
                Medium
              </strong>
            </div>
            <div
              className="col-xs-4 d-inline-block"
            >
              <span
                className="label"
              >
                Category
              </span>
              <strong>
                Cat D
              </strong>
            </div>
          </div>
        </div>
        <div
          className="visible-large"
        >
          <div
            className="col-xs-6 col-sm-3"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Alerts
                </span>
                <a
                  className="alerts-link"
                  href="/offenders/A1234RT/alerts#tab-content"
                  onClick={[Function]}
                >
                  <span
                    className="active-alert"
                  >
                    <strong>
                      9
                    </strong>
                    <span>
                       active 
                    </span>
                  </span>
                  <span>
                    <strong
                      className="inactive-alert"
                    >
                      8
                    </strong>
                    <span>
                       inactive 
                    </span>
                  </span>
                </a>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <div>
                  <span
                    className="label"
                  >
                    Location
                  </span>
                  <div>
                    <strong>
                      H-1-001
                    </strong>
                  </div>
                  <div>
                    <strong>
                      HLI
                    </strong>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="visible-small"
        >
          <div
            className="col-xs-4"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Alerts
                </span>
                <a
                  className="alerts-link"
                  href="/offenders/A1234RT/alerts#tab-content"
                  onClick={[Function]}
                >
                  <span
                    className="active-alert"
                  >
                    <strong>
                      9
                    </strong>
                    <span>
                       active 
                    </span>
                  </span>
                  <span>
                    <strong
                      className="inactive-alert"
                    >
                      8
                    </strong>
                    <span>
                       inactive 
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            className="col-xs-4"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <div>
                  <span
                    className="label"
                  >
                    Location
                  </span>
                  <div>
                    <strong>
                      H-1-001
                    </strong>
                  </div>
                  <div>
                    <strong>
                      HLI
                    </strong>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-3"
        >
          <div
            className="stacked-links"
          >
            <div>
              <a
                className="button-link"
                href="/offenders/A1234RT/add-case-note"
                name="add-case-note-link"
                onClick={[Function]}
              >
                Add case note
              </a>
            </div>
            <div>
              <a
                className="button-link"
                href="/offenders/A1234RT/add-appointment"
                name="add-appointment-link"
                onClick={[Function]}
              >
                Add appointment
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component should render correctly when iep linktoggle enabled 1`] = `
<div
  className="header-details"
>
  <div
    className="row visible-small"
  >
    <div
      className="col-sm-12 no-padding-left"
    >
      <span
        className="acct-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        ACCT OPEN
      </span>
      <span
        className="assault-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        STAFF ASSAULTER
      </span>
      <span
        className="arsonist-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        <img
          alt=""
          className="arsonist-adjust"
          height="14"
          src="/img/Arsonist_icon.png"
          width="11"
        />
         ARSONIST
      </span>
      <span
        className="disability-status"
        onClick={[MockFunction]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        <img
          alt=""
          className="disability-adjust"
          height="15"
          src="/img/Disability_icon.png"
          width="14"
        />
         PEEP
      </span>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-2 col-xs-3 no-left-gutter no-right-gutter"
    >
      <div
        className="photo clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        <img
          className="sc-bdVaJa gYHwxf"
          src="/app/images/-11/data"
        />
      </div>
    </div>
    <div
      className="col-xs-9 col-sm-9 col-md-10 col-lg-10 no-left-gutter no-right-gutter add-gutter-bottom-mobile"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12"
        >
          <div
            className="inline-header-large align-alerts"
          >
            <span
              className="acct-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              ACCT OPEN
            </span>
            <span
              className="assault-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              STAFF ASSAULTER
            </span>
            <span
              className="arsonist-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              <img
                alt=""
                className="arsonist-adjust"
                height="14"
                src="/img/Arsonist_icon.png"
                width="11"
              />
               ARSONIST
            </span>
            <span
              className="disability-status"
              onClick={[MockFunction]}
              onKeyDown={[Function]}
              role="link"
              tabIndex={0}
            >
              <img
                alt=""
                className="disability-adjust"
                height="15"
                src="/img/Disability_icon.png"
                width="14"
              />
               PEEP
            </span>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-3 col-sm-3 col-xs-12"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Prison number
              </span>
              <strong>
                A1234RT
              </strong>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Key worker
              </span>
              <strong>
                <span>
                  -6
                </span>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="visible-large"
        >
          <div
            className="middle-section"
          >
            <div
              className="col-xs-4 col-sm-3 visible-large"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    IEP
                  </span>
                  <strong>
                    Standard
                  </strong>
                  <div>
                    <a
                      className="link"
                      data-qa="iep-details-link"
                      href="http://prisonstaffhuboffenders/A1234RT/iep-level"
                    >
                      IEP details
                    </a>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    CSRA
                  </span>
                  <strong>
                    Medium
                  </strong>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Category
                  </span>
                  <strong>
                    Cat D
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="col-xs-12 visible-small"
            >
              <div
                className="row"
              >
                <div
                  className="col-xs-4 d-inline-block"
                >
                  <span
                    className="label"
                  >
                    IEP
                  </span>
                  <strong>
                    Standard
                  </strong>
                  <div>
                    <a
                      className="link"
                      data-qa="iep-details-link"
                      href="http://prisonstaffhuboffenders/A1234RT/iep-level"
                    >
                      IEP details
                    </a>
                  </div>
                </div>
                <div
                  className="col-xs-4 d-inline-block"
                >
                  <span
                    className="label"
                  >
                    CSRA
                  </span>
                  <strong>
                    Medium
                  </strong>
                </div>
                <div
                  className="col-xs-4 d-inline-block"
                >
                  <span
                    className="label"
                  >
                    Category
                  </span>
                  <strong>
                    Cat D
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="visible-large"
            >
              <div
                className="col-xs-6 col-sm-3"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <span
                      className="label"
                    >
                      Alerts
                    </span>
                    <a
                      className="alerts-link"
                      href="/offenders/A1234RT/alerts#tab-content"
                      onClick={[Function]}
                    >
                      <span
                        className="active-alert"
                      >
                        <strong>
                          9
                        </strong>
                        <span>
                           active 
                        </span>
                      </span>
                      <span>
                        <strong
                          className="inactive-alert"
                        >
                          8
                        </strong>
                        <span>
                           inactive 
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <div>
                      <span
                        className="label"
                      >
                        Location
                      </span>
                      <div>
                        <strong>
                          H-1-001
                        </strong>
                      </div>
                      <div>
                        <strong>
                          HLI
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="visible-small"
            >
              <div
                className="col-xs-4"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <span
                      className="label"
                    >
                      Alerts
                    </span>
                    <a
                      className="alerts-link"
                      href="/offenders/A1234RT/alerts#tab-content"
                      onClick={[Function]}
                    >
                      <span
                        className="active-alert"
                      >
                        <strong>
                          9
                        </strong>
                        <span>
                           active 
                        </span>
                      </span>
                      <span>
                        <strong
                          className="inactive-alert"
                        >
                          8
                        </strong>
                        <span>
                           inactive 
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
              <div
                className="col-xs-4"
              >
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <div>
                      <span
                        className="label"
                      >
                        Location
                      </span>
                      <div>
                        <strong>
                          H-1-001
                        </strong>
                      </div>
                      <div>
                        <strong>
                          HLI
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-xs-12 col-sm-3"
            >
              <div
                className="stacked-links"
              >
                <div>
                  <a
                    className="button-link"
                    href="/offenders/A1234RT/add-case-note"
                    name="add-case-note-link"
                    onClick={[Function]}
                  >
                    Add case note
                  </a>
                </div>
                <div>
                  <a
                    className="button-link"
                    href="/offenders/A1234RT/add-appointment"
                    name="add-appointment-link"
                    onClick={[Function]}
                  >
                    Add appointment
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="visible-small"
    >
      <div
        className="middle-section"
      >
        <div
          className="col-xs-4 col-sm-3 visible-large"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                IEP
              </span>
              <strong>
                Standard
              </strong>
              <div>
                <a
                  className="link"
                  data-qa="iep-details-link"
                  href="http://prisonstaffhuboffenders/A1234RT/iep-level"
                >
                  IEP details
                </a>
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                CSRA
              </span>
              <strong>
                Medium
              </strong>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Category
              </span>
              <strong>
                Cat D
              </strong>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 visible-small"
        >
          <div
            className="row"
          >
            <div
              className="col-xs-4 d-inline-block"
            >
              <span
                className="label"
              >
                IEP
              </span>
              <strong>
                Standard
              </strong>
              <div>
                <a
                  className="link"
                  data-qa="iep-details-link"
                  href="http://prisonstaffhuboffenders/A1234RT/iep-level"
                >
                  IEP details
                </a>
              </div>
            </div>
            <div
              className="col-xs-4 d-inline-block"
            >
              <span
                className="label"
              >
                CSRA
              </span>
              <strong>
                Medium
              </strong>
            </div>
            <div
              className="col-xs-4 d-inline-block"
            >
              <span
                className="label"
              >
                Category
              </span>
              <strong>
                Cat D
              </strong>
            </div>
          </div>
        </div>
        <div
          className="visible-large"
        >
          <div
            className="col-xs-6 col-sm-3"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Alerts
                </span>
                <a
                  className="alerts-link"
                  href="/offenders/A1234RT/alerts#tab-content"
                  onClick={[Function]}
                >
                  <span
                    className="active-alert"
                  >
                    <strong>
                      9
                    </strong>
                    <span>
                       active 
                    </span>
                  </span>
                  <span>
                    <strong
                      className="inactive-alert"
                    >
                      8
                    </strong>
                    <span>
                       inactive 
                    </span>
                  </span>
                </a>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <div>
                  <span
                    className="label"
                  >
                    Location
                  </span>
                  <div>
                    <strong>
                      H-1-001
                    </strong>
                  </div>
                  <div>
                    <strong>
                      HLI
                    </strong>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="visible-small"
        >
          <div
            className="col-xs-4"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Alerts
                </span>
                <a
                  className="alerts-link"
                  href="/offenders/A1234RT/alerts#tab-content"
                  onClick={[Function]}
                >
                  <span
                    className="active-alert"
                  >
                    <strong>
                      9
                    </strong>
                    <span>
                       active 
                    </span>
                  </span>
                  <span>
                    <strong
                      className="inactive-alert"
                    >
                      8
                    </strong>
                    <span>
                       inactive 
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            className="col-xs-4"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <div>
                  <span
                    className="label"
                  >
                    Location
                  </span>
                  <div>
                    <strong>
                      H-1-001
                    </strong>
                  </div>
                  <div>
                    <strong>
                      HLI
                    </strong>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-sm-3"
        >
          <div
            className="stacked-links"
          >
            <div>
              <a
                className="button-link"
                href="/offenders/A1234RT/add-case-note"
                name="add-case-note-link"
                onClick={[Function]}
              >
                Add case note
              </a>
            </div>
            <div>
              <a
                className="button-link"
                href="/offenders/A1234RT/add-appointment"
                name="add-appointment-link"
                onClick={[Function]}
              >
                Add appointment
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
